# FastAPI-template

fastapi-advanced/: main.py  pyproject.toml
fastapi-database/: .gitignore  alembic.ini  database.py  main.py  models.py  pyproject.toml  todos.db  todosapp.db
fastapi-database/alembic/versions/: 654d2692f6e4_create_phone_number_col_on_users_table.py
fastapi-database/routers/: admin.py  auth.py  todos.py  users.py
fastapi-requests/: .gitignore  books.py  books2.py  pyproject.toml
