[project]
name = "fastapi-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.115.12",
    "passlib>=1.7.4",
    "pydantic>=2.11.2",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.40",
    "typing>=3.10.0.0",
    "uvicorn[standard]>=0.34.0",
]
